procps-3.2.4 --> procps-3.2.5

display problem on 64-bit systems fixed
sysctl: better error messages
ps: security labels can contain any printable ASCII
top: help and version message on stdout, with exit(0)    #283541
ps: SIGTSTP from ^Z shouldn't print bug email address
slabtop: compile with glibc 2.2.17 (and older, likely)

procps-3.2.3 --> procps-3.2.4

support 64-bit MIPS with n32 binary
sparc32 optimized for sparc32 again
pwdx: new command -- thanks Nicholas Miell
ps: UTF-8 username + command -- thanks Karel Zak rh134763,rh112518,rh134780
ps: more room for some columns
ps: tolerate SubDomain security module CONTEXT/LABEL data    #277401
watch: passes COLUMNS and LINES in environment
top: in batch mode, tolerate unknown $TERM -- thanks Daniel Walsh
pkill: quiet about processes that die before kill()

procps-3.2.2 --> procps-3.2.3

avoid truncating long usernames
avoid warning about -lncurses when not linking (more)
new names for shared libraries (packagers: watch out!)
"make install" no longer rebuilds everything
wchan now '*' for multi-threaded processes
ps: new man page -- thanks Nicolas Francois
ps: STAT shows l for multi-threaded processes
vmstat: some overflow problems fixed -- thanks Holger Kiehl
sysctl: man page fix

procps-3.2.1 --> procps-3.2.2

new packager (downstream maintainer) guidelines in README
move striping from install command to CFLAGS
new gcc options in use: -fweb, -frename-registers, etc.
avoid warning about -lncurses when not linking -- thanks FLWM
tolerate IA-64 headers without PAGE_SIZE
ps: k option, same as --sort
ps: personality-specific -x support (HP-UX and SVR4-MP)
pgrep: man page SEE ALSO updated                    #226817
sysctl: -q and -N options
sysctl: better error handling of failed writes
top: tolerate sparse CPU numbering
top: try to handle terminals lacking rmam and smam     #235003
top: xterm dislikes clear-to-eol at eol (char lost)
vmstat: fixed -d
watch: allow sub-second intervals -- thanks Thomas Stewart
